--- a/assignment_2/assignment_2.tex
+++ b/assignment_2/assignment_2.tex
@@ -220,5 +220,7 @@ Listing \ref{homework_example} shows a Perl script.
 \end{homeworkProblem}
 
 %----------------------------------------------------------------------------------------
+\chapter{hejsa kapitel}
 
+\section{fsa}
 \end{document}
