TEMPLATE IS READY NOW

--- a/SON/SON.tex
+++ b/SON/SON.tex
@@ -22,7 +22,6 @@
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
-
 \documentclass{report}
 
 \usepackage{fancyhdr} % Required for custom headers
@@ -186,6 +185,7 @@
 %	TABLE OF CONTENTS
 %----------------------------------------------------------------------------------------
 
+
 %\setcounter{tocdepth}{1} % Uncomment this line if you don't want subsections listed in the ToC
 
 \newpage
@@ -198,6 +198,18 @@
 
 \chapter*{SON - Introduction and overview}
 	\section{Introduction}
-	hejsa
+	
 	\section{Overview}
+
+
+
+%----------------------------------------------------------------------------------------
+%	BIBLIOGRAPHY
+%----------------------------------------------------------------------------------------
+\clearpage
+\addcontentsline{toc}{section}{References}
+\bibliographystyle{unsrt}
+\bibliography{/home/frederik/Documents/bibtex/SON.bib}
+
+
 \end{document}
