changed some layout stuff

--- a/SON/SON.tex
+++ b/SON/SON.tex
@@ -162,7 +162,7 @@
 \normalsize\vspace{0.1in}\small{\hmwkDueDate}\\
 \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}
 \noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}} 
-\vspace{1.2in}
+\vspace{1in}
 }
 
 \author{\textbf{\hmwkAuthorName}}
@@ -195,11 +195,32 @@
 %----------------------------------------------------------------------------------------
 %	INTRODUCTION & OVERVIEW
 %----------------------------------------------------------------------------------------
-
+\clearpage
+\addcontentsline{toc}{chapter}{SON - Introduction and overview}
 \chapter*{SON - Introduction and overview}
 	\section{Introduction}
 	
 	\section{Overview}
+	
+	%----------------------------------------------------------------------------------------
+%	SELF-CONFIGURATION
+%----------------------------------------------------------------------------------------
+
+
+
+
+
+%----------------------------------------------------------------------------------------
+%	SELF-OPTIMIZATION
+%----------------------------------------------------------------------------------------
+
+
+
+
+%----------------------------------------------------------------------------------------
+%	SELF-HEALING
+%----------------------------------------------------------------------------------------
+
 
 
 
@@ -207,7 +228,7 @@
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
 \clearpage
-\addcontentsline{toc}{section}{References}
+\addcontentsline{toc}{chapter}{References}
 \bibliographystyle{unsrt}
 \bibliography{/home/frederik/Documents/bibtex/SON.bib}
 
